# FoodApi.Tests/swagger.json
@@ -4,10 +4,9 @@
         "title": "FoodApi.Web | v1",
         "version": "1.0.0"
     },
-    "servers": [
-        {
-            "url": "http://localhost:5025"
-        }
+    "servers": [{
+        "url": "http://localhost:5025"
+    }
     ],
     "paths": {
         "/menu": {
@@ -38,15 +37,14 @@
                 "tags": [
                     "FoodApi.Web"
                 ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "required": true,
+                    "schema": {
+                        "type": "string"
                     }
+                }
                 ],
                 "responses": {
                     "200": {
@@ -59,6 +57,27 @@
             "get": {
                 "tags": [
                     "FoodApi.Web"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/make/{id}/tasty": {
+            "post": {
+                "tags": [
+                    "FoodApi.Web"
+                ],
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "required": true,
+                    "schema": {
+                        "type": "string"
+                    }
+                }
                 ],
                 "responses": {
                     "200": {
@@ -98,9 +117,8 @@
             }
         }
     },
-    "tags": [
-        {
-            "name": "FoodApi.Web"
-        }
+    "tags": [{
+        "name": "FoodApi.Web"
+    }
     ]
 }
